--- a/content/themes/azami2/sass/components/other/_mailchimp.scss
+++ b/content/themes/azami2/sass/components/other/_mailchimp.scss
@@ -23,7 +23,7 @@
 	&:nth-child(3){
 		width: 47%;
 		float: left;
-		z-index: 1000;
+		z-index: 997;
 	}
 	
 	&:nth-child(3){
